2021-10-14	Steve Martin  <kronostar.st4@gmail.com>
	* Update README.md to point to correct website
	* updated Copyright in LICENSE file
	
2021-10-11  steve  <kronostar.st4@gmail.com>
	* src/dbimport.py: Fixes for 'is', 'is not' changes in Python 3.8
	* src/crud.py: Fixes for 'is', 'is not' changes in Python 3.8

2021-10-11	Steve Martin  <kronostar.st4@gmail.com>
	* Python bumped to 3.9
	* Copyright bumped

2019-11-06  Steve Martin  <kronostar.st4@gmail.com>
	* Version 1.0 released

2018-12-02	Steve Martin  <kronostar.st4@gmail.com>
	* Start of rewrite in Python 3.7 as a desktop app

2016-11-14	Steve Martin  <kronostar.st4@gmail.com>
	* Laravel 5.3 coding updates

2016-02-03  Steve Martin  <kronostar.st4@gmail.com>
	* Laravel framework added
	
2012-06-03  Steve Martin  <kronostar.st4@gmail.com>
	* classes/DB.class.php: added
	
2012-05-27  Steve Martin  <kronostar.st4@gmail.com>
	* All: all initial files and scripts added