@@ -1,6 +1,6 @@
 3-Clause BSD License
 
-Copyright (c) 2018,2019,2021 Steve Martin
+Copyright (C) 2018,2019,2021,2025 Steve Martin
 
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
