@@ -4,7 +4,7 @@
 \begin{center}
 {\bf\large MuColLib}
 
-Copyright \copyright{} 2018,2019,2021 Steve Martin
+Copyright \copyright{} 2018,2019,2021,2025 Steve Martin
 \end{center}
 
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
