@@ -37,7 +37,7 @@
 \null
 \vfill
 \bigskip
-\noindent Copyright \copyright{} 2018,2019,2021  Steve Martin.\\
+\noindent Copyright \copyright{} 2018,2019,2021,2025  Steve Martin.\\
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3
 or any later version published by the Free Software Foundation;
