@@ -3,7 +3,7 @@
 # Program: dbimport.py
 #  Author: Steve Martin
 # License: BSD-3-Clause
-# Copyright (C) 2018,2019,2021 Steve Martin
+# Copyright (C) 2018,2019,2021,2025 Steve Martin
 #
 # CSV file format:
 # 0 = Artist Name
