@@ -10,5 +10,5 @@ fi
 DIR="${1}"
 cd ${DIR}
 for FILE in $(grep -ilR "Copyright (C) " *); do
-    sed -i "s/2018,2019 Steve Martin/2018,2019,2021 Steve Martin/g" ${FILE}
+    sed -i "s/2018,2019,2021,2025 Steve Martin/2018,2019,2021,2025 Steve Martin/g" ${FILE}
 done
