@@ -1,3 +1,6 @@
+2025-04-24	Steve Martin  <kronostar.st4@gmail.com>
+	* Copyright bumped for 2025
+
 2021-10-14	Steve Martin  <kronostar.st4@gmail.com>
 	* Update README.md to point to correct website
 	* updated Copyright in LICENSE file
